fix: 修复 P3C 批量自动修正引入的 4 模块语法损坏 + 提交 P3C getFirst 规约变更
修复 b0fdf1f2a/aabdc3e72 P3C 批量修正误删分号/破坏 javadoc 嵌套导致的
编译错误，涉及 4 个模块 25 个文件：
- image-starter: PNGImageReader（javadoc 嵌套损坏、缺 catch/finally）
- vector-starter: VectorStorageProviderFactory / CuvsVectorStorage（javadoc 嵌套）
- onnx-starter: OnnxSpeechSynthesizer/CampplusEmbedding/VoiceprintPipeline/
  MossTtsTranslator/MossSentencePieceBpe/MossTextToAudioClient/PocketTtsTranslator/
  Zipformer*/YoloUniowTranslator/TinaFaceTranslator/OnnxRetinaFaceTranslator/
  CnIdCardRecognizer/MattingTranslator/U2netSegTranslator/OnnxQwenTranslator/
  YoloWorldDetectorTranslator/OnnxModelRegistrar（javadoc 嵌套 + return 位置错乱）
- git-starter: StatusOperation（javadoc 嵌套）

同时提交 235 个跨模块 P3C getFirst() 规约修正（148 处 getFirst 替换 +
87 处 P3C 豁免注释），均为良性变更，已验证编译通过。

验证：image/vector/onnx/git 4 模块 compile 全部 BUILD SUCCESS，
16 个 M 文件模块 compile 全部 OK，datasearch-starter 冒烟测试 68/68 全绿。

新增：RagPipelineImageOcrTest / RagPipelineLifecycleTest（common-starter RAG 测试），
birefnet_large_1024.onnx 模型（bi-refnet 背景移除 large 模型）