@@ -85,7 +85,7 @@ public class RealWebPhotoTranslator implements Translator<Image, Image> {
             log.debug("                        ");
         }
 
-        NDArray array = list.get(0);
+        NDArray array = list.getFirst();
         long[] shape = array.getShape().getShape();
         if (log.isDebugEnabled()) {
             log.debug("       shape: {}, dtype: {}", array.getShape(), array.getDataType());
