@@ -133,7 +133,7 @@ public class SentaTranslator implements Translator<String[], float[]> {
     @Override
     /** 处理输出 */
     public float[] processOutput(TranslatorContext ctx, NDList list) {
-        return list.get(0).toFloatArray();
+        return list.getFirst().toFloatArray();
     }
 
     @Override
