@@ -80,7 +80,7 @@ public class PytorchTextFeatureTranslator implements Translator<String, float[]>
     @Override
     /** 处理输出 */
     public float[] processOutput(TranslatorContext ctx, NDList list) {
-        return list.get(0).toFloatArray();
+        return list.getFirst().toFloatArray();
     }
 
     @Override
