@@ -37,7 +37,7 @@ public class OpusEncoderTranslator implements NoBatchifyTranslator<int[], NDArra
     @Override
     /** 处理输出 */
     public NDArray processOutput(TranslatorContext ctx, NDList list) {
-        NDArray encoderHiddenStates = list.get(0);
+        NDArray encoderHiddenStates = list.getFirst();
         encoderHiddenStates.detach();
         return encoderHiddenStates;
     }
